--- a/pages/viajeusa.html
+++ b/pages/viajeusa.html
@@ -57,7 +57,7 @@
             padding: 10px;
         }
         header {
-            background-image: url('./logos/logo3.png'); /* Coloca la ruta correcta a la imagen */
+            background-image: url('../logos/logo3.png'); /* Coloca la ruta correcta a la imagen */
             background-size: contain;
             background-position: center;
             color: #FFFFFF;
