--- a/pages/viajeusa.html
+++ b/pages/viajeusa.html
@@ -65,8 +65,11 @@
             text-align: center;
         }
     </style>
+    <script src="viajeusa.js" defer></script>
 </head>
 <body>
+    <p id="welcomeMessage">Cargando información...</p>
+    <button onclick="logout()">Cerrar sesión</button>
 <header>
     
 </header>
