--- a/pages/viajeusa.html
+++ b/pages/viajeusa.html
@@ -68,8 +68,14 @@
     <script src="viajeusa.js" defer></script>
 </head>
 <body>
-    <p id="welcomeMessage">Cargando información...</p>
     <button onclick="logout()">Cerrar sesión</button>
+
+    <script>
+    function logout() {
+        localStorage.removeItem("token");
+        window.location.href = "../index.html";
+    }
+    </script>
 <header>
     
 </header>
